--- a/pagina-1.html
+++ b/pagina-1.html
@@ -49,4 +49,8 @@
                     </footer>
 
         </body>
+
+    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/08/15/12/20250815123904-71T8QQ4T.js" defer></script>
+
 </html>
