--- a/pagina-1.html
+++ b/pagina-1.html
@@ -45,12 +45,14 @@
                     </ul>
                     
                     <footer>
-                        Microfost Emcarta Todos los derechos reservados - @SAMUEL DIAZ Y DIEGO BENITEZ - @3171084
+                        Microfost Emcarta Todos los derechos reservados - @SAMUEL DIAZ  - @3171084
                     </footer>
 
         </body>
 
-    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
 <script src="https://files.bpcontent.cloud/2025/08/15/12/20250815123904-71T8QQ4T.js" defer></script>
+    
 
 </html>
+
